# hilsim

./: .env  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.delay.yml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
analysis/: create_delay_comparison.py
analysis_results/: hils_analysis_report_20250924_140204.md  hils_analysis_report_20250924_141207.md
archive/broken_rtt_20250924_113407/: README.md
archive/broken_rtt_20250924_113407/numeric_app_backup/: config.yaml  main_realtime.py
archive/broken_rtt_20250924_113407/plant_app_backup/: config.yaml  (+2 more)
archive/pre_udp_architecture_20250924_134627/: COMMUNICATION_ANALYSIS.md  COMMUNICATION_TESTS.md  analyze_communication_timing.py  analyze_delay_impact.py  analyze_rtt_and_clipping.py  debug_no_delay.py  debug_rtt_mismatch.py  issue_template.md
communication_tests/: README.md  delay_logic_test.py  delay_verification_test.py  quick_delay_test.py  rtt_monitor.py  simple_delay_test.py  test_communication_integration.py
docker/: .env  compose.yaml
logs/: .gitkeep
numeric/: Dockerfile
numeric/app/: config.yaml  main.py  numeric_communication.py  realtime_simulator.py  requirements.txt  test_numeric_communication.py
plant/: Dockerfile
plant/app/: config.yaml  main.py  plant_communication.py  requirements.txt  test_plant_communication.py
scripts/: README_ANALYZER.md  hils_analyzer.py  log_manager.py
shared/: protocol.py
shared/schemas/: messages.proto
simple_pid_control/: README.md  anti_overshoot_pid_sim.py  optimized_pid_sim.py  simple_pid_sim.py
(+50 files in other folders)
